add logic and link to make order for specific sprint

--- a/app/scripts/templates/daily_rations_collection.hbs
+++ b/app/scripts/templates/daily_rations_collection.hbs
@@ -1,4 +1,5 @@
 <div id="user_panel"></div>
+<p>Sprint id is <b>{{sprint_id}}</b></p>
 {{#each days}}
 	<div class="day_body clearfix" style="border: 1px solid red; margin: 10px;">
 		<p>day number is {{day_number}}
