--- a/app/scripts/templates/sprint.hbs
+++ b/app/scripts/templates/sprint.hbs
@@ -6,4 +6,5 @@
 		<p>{{sprint.title}}</p>
 	  <p>Start {{sprint.started_at}}</p>
 	  <p>End {{sprint.started_at}}</p>
+	  <a href="#sprints/{{sprint.id}}/rations">Order a food</a>
   </div>
