--- a/app/scripts/templates/form.hbs
+++ b/app/scripts/templates/form.hbs
@@ -1,12 +1,11 @@
 <header id="user_panel"></header>
 
 <div class="container">
-  <div id="sprintContainer" class="alert alert-info">
-  </div>
-
-  <form id="order_form" class="form-horizontal dailyRations" role="form" action="http://127.0.0.1:3000/api/v1" method="POST">
+	<form id="order_form" role="form">
+	  <div id="sprintContainer">
+	  </div>
+  
     <div id="dailyRations"></div>
-    <input type="submit" class="btn btn-primary">
-    <button type="submit" class="btn btn-default">Submit</button>
+    <button class="btn btn-primary">Send order!</button>
   </form>
 </div>
