--- a/app/scripts/templates/sprint.hbs
+++ b/app/scripts/templates/sprint.hbs
@@ -5,5 +5,6 @@
 		<p>{{sprint.title}}</p>
 	  <p>Start {{sprint.started_at}}</p>
 	  <p>End {{sprint.started_at}}</p>
+	  <input type="hidden" name="sprint_id" value="{{sprint.id}}">
 	  <a href="#sprints/{{sprint.id}}/rations">Order a food</a>
   </div>
