--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -3,6 +3,7 @@ $icon-font-path: "/bower_components/bootstrap-sass-official/assets/fonts/bootstr
 @import 'bootstrap-sass-official/assets/stylesheets/bootstrap.scss';
 @import 'sprints.scss';
 @import 'daily_rations.scss';
+@import 'form.scss';
 
 .browsehappy {
     margin: 0.2em 0;
