--- a/app/styles/form.scss
+++ b/app/styles/form.scss
@@ -33,3 +33,15 @@
 		}
 	}
 }
+
+.price{
+	font-weight: bold;
+}
+
+.dish_title{
+	font-weight: bold;
+}
+
+.ui-tabs-anchor, .current_day{
+	text-transform: capitalize;
+}
