new view logic works

--- a/app/scripts/templates/daily_rations_collection.hbs
+++ b/app/scripts/templates/daily_rations_collection.hbs
@@ -2,23 +2,7 @@
 	<div id="tabs-{{day_number}}" class="day_body clearfix">
 		<h2 class="current_day">{{day_of_week day_number}}</h2>
 		<div class="row">
-			<div>
-				{{#each categories}}
-					<h3>{{title}}</h3>
-					<div class="row">
-						{{#each dishes}}
-							<div class="well dish_body col-sm-6 clearfix">
-					 			<input type="checkbox">
-								<p class="pull-right"><span class="price">{{price}}</span> UAH</p>
-								<span class="dish_title">{{title}}</span>
-								<p><b>{{description}}</b></p>
-								<span>quantities</span>
-								<input type="number" class="form-control quantity" disabled
-				                 name="days[{{../../id}}][dishes][{{id}}]" value="1" min="0">
-							</div>
-						{{/each}}
-					</div>
-				{{/each}}
+			<div class="categories-{{day_number}}">
 			</div>
 		</div>
   </div>
