--- a/app/scripts/templates/dish_collection.hbs
+++ b/app/scripts/templates/dish_collection.hbs
@@ -6,6 +6,6 @@
 		<p><b>{{description}}</b></p>
 		<span>quantities</span>
 		<input type="number" class="form-control quantity" disabled
-	              name="days[{{../../id}}][dishes][{{id}}]" value="1" min="0">
+	              name="days[{{../day}}][dishes][{{id}}]" value="1" min="0">
 	</div>
 {{/each}}
