update pre-order field behaviour

--- a/app/scripts/templates/form.hbs
+++ b/app/scripts/templates/form.hbs
@@ -1,5 +1,4 @@
 <header id="user_panel"></header>
-
 <div class="container">
 	<form id="order_form" role="form">
 	  <div id="sprintContainer">
@@ -8,7 +7,7 @@
 	  	<div id="tabs">
 	  		<ul class="nav nav-tabs">
 				{{#each days}}
-					<li><a href="#tabs-{{day_number}}">{{day_of_week day_number}}</a></li>
+					<li><a href="#tabs-{{day_number}}" data-day-in-tab="{{day_number}}">{{day_of_week day_number}}</a></li>
 				{{/each}}
 				</ul>
 				<div class="col-sm-8" id="dailyRations"></div>
