--- a/app/scripts/templates/pre_order.hbs
+++ b/app/scripts/templates/pre_order.hbs
@@ -11,6 +11,6 @@
 			</div>
 		{{/each}}
 	</div>
-	<button class="previous btn btn-default">Previous day</button>
-	<button class="next btn btn-default">Next day</button>
+	<button class="previous btn btn-default" data-change-day="-1">Previous day</button>
+	<button class="next btn btn-default" data-change-day="1">Next day</button>
 </div>
