--- a/app/styles/form.scss
+++ b/app/styles/form.scss
@@ -10,6 +10,7 @@
 		border: 1px solid red;
 		margin: 3px;
 		border-radius: 3px;
+		text-transform: capitalize;
 	}
 	.day_order{
 		border: 1px solid green;
