--- a/app/scripts/templates/dish_collection.hbs
+++ b/app/scripts/templates/dish_collection.hbs
@@ -1,5 +1,5 @@
 {{#each dishes}}
-	<div class="well dish_body col-sm-6 clearfix" dish_id="{{id}}">
+	<div class="well dish_body col-sm-6 clearfix" data-dish-id="{{id}}">
 		<input type="checkbox">
 		<p class="pull-right"><span class="price">{{price}}</span> UAH</p>
 		<span class="dish_title">{{title}}</span>
