--- a/app/scripts/templates/pre_order.hbs
+++ b/app/scripts/templates/pre_order.hbs
@@ -1,11 +1,14 @@
 <div class="pre-order">
+	<p class="order_summary">Order summary</p>
+	<hr>
 	<div class="accordion">
 		{{#each days}}
 			<p class="day_name">{{day_of_week day_number}}</p>
-			<div class="clearfix">
+			<div class="clearfix items-container">
 				{{#each ../categories_id}}
-				<div class="day_order {{day_of_week ../day_number}} dish_in_category-{{this}}"></div>
+					<div class="day_order {{day_of_week ../day_number}} dish_in_category-{{this}}"></div>
 				{{/each}}
+				<hr class="before_summary">
 				<p class="pull-left">Order total:<span class="order_total"></span> </p>
 				<p class="pull-right">Left: <span class="remaining_balance">{{max_total}}</span></p>
 			</div>
@@ -13,4 +16,5 @@
 	</div>
 	<button class="previous btn btn-default" data-change-day="-1">Previous day</button>
 	<button class="next btn btn-default" data-change-day="1">Next day</button>
+	<button class="btn btn-primary">Send order!</button>
 </div>
