add numbers to order_items

--- a/app/scripts/templates/item.hbs
+++ b/app/scripts/templates/item.hbs
@@ -1,5 +1,6 @@
 {{#each items}}
 	<div class='item_in_order dish_id_in_order-{{id}}'>
+		<span class="number_in_order"></span>
 		<span class='title_for_dish'>{{title}} X </span>
 	  <span class='quantity_in_order'>{{quantity}}</span>
 	  <span class='currency pull-right'>&nbsp;UAH</span>
