split days and daily_rations logic

--- a/app/scripts/templates/form.hbs
+++ b/app/scripts/templates/form.hbs
@@ -10,7 +10,7 @@
 					<li><a href="#tabs-{{day_number}}" data-day-in-tab="{{day_number}}">{{day_of_week day_number}}</a></li>
 				{{/each}}
 				</ul>
-				<div class="col-sm-8" id="dailyRations"></div>
+				<div class="col-sm-8" id="daysCollection"></div>
 	  	</div>
 	    <div class="col-sm-4" id="pre-order"></div>
     </div>
