add raw order view

--- a/app/scripts/templates/dish_collection.hbs
+++ b/app/scripts/templates/dish_collection.hbs
@@ -9,7 +9,7 @@
 			<div class="number_field">
 				<button class="trigger_disabled minus" data-value="-1" disabled>-</button>
 				<input type="number" class="form-control quantity trigger_disabled" disabled
-			              name="days[{{../day_id}}][dishes][{{id}}]" value="1" min="0">
+			              name="{day_id:'{{../day_id}}',dish_id:'{{id}}',price:'{{price}}'}" value="1" min="0">
 			  <button class="plus trigger_disabled" data-value="1" disabled>+</button>
 		  </div>
 	  </div>
