--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -4,6 +4,7 @@ $icon-font-path: "/bower_components/bootstrap-sass-official/assets/fonts/bootstr
 @import 'sprints.scss';
 @import 'daily_rations.scss';
 @import 'form.scss';
+@import 'order.scss';
 
 .browsehappy {
     margin: 0.2em 0;
