add date to views/templates

--- a/app/scripts/templates/day_collection.hbs
+++ b/app/scripts/templates/day_collection.hbs
@@ -1,6 +1,9 @@
 {{#each days}}
 	<div id="tabs-{{day_number}}" class="day_body clearfix">
-		<h2 class="current_day">{{day_of_week day_number}}</h2>
+		<p>
+			<span class="current_day">{{day_of_week day_number}}</span>
+			<span> {{dateFormat ../sprint.started_at format="DD.MM.YY" offset=day_number}}</span>
+		</p>
 		<div class="row">
 			<div class="categories-{{day_number}}">
 			</div>
