--- a/app/scripts/templates/sprints_collection.hbs
+++ b/app/scripts/templates/sprints_collection.hbs
@@ -4,6 +4,9 @@
 		<p class="state pull-right {{state}}">
 	  	{{state}}
 	  </p>
-		<a  href="#sprints/{{id}}">{{title}}</a>
+		<p>{{title}}</p>
+	  <p>Start {{dateFormat started_at}}</p>
+	  <p>End {{dateFormat finished_at}}</p>
+	  <a href="#sprints/{{id}}/rations">Order a food</a>
   </div>
 {{/each}}
