add css and emphasizing for current day in order

--- a/app/scripts/templates/panel.hbs
+++ b/app/scripts/templates/panel.hbs
@@ -1,2 +1,4 @@
-<p>Hello, {{username}}.</p>
-<button class="logout">Logout</button>
+<div class="user_panel clearfix">
+	<div class="logout pull-right">logout</div>
+	<p class="username pull-right">{{username}}</p>
+</div>
