--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -5,6 +5,7 @@ $icon-font-path: "/bower_components/bootstrap-sass-official/assets/fonts/bootstr
 @import 'daily_rations.scss';
 @import 'form.scss';
 @import 'order.scss';
+@import 'panel.scss';
 
 .browsehappy {
     margin: 0.2em 0;
