--- a/app/styles/order.scss
+++ b/app/styles/order.scss
@@ -1,7 +1,70 @@
+.order_body{
+	height: 300px;
+	padding: 15px;
+	border: 1px solid #999;
+	margin-bottom: 30px;
+	ol{
+		padding-left: 10px;
+		counter-reset: item;
+		li{
+			display: block;
+			&:before{
+				content: counter(item) ". ";
+			  counter-increment: item;
+			  font-weight: bold;
+			}
+		}
+	}
+}
+
+.today{
+	border: 1px solid #093;
+	box-shadow: 0 0 10px #093;
+}
+
+.today:before{
+	border-radius: 0 4px 4px 0;
+	content: "Today";
+	color: #fff;
+	text-align: center;
+	line-height: 30px;
+	display: block;
+	position: absolute;
+	height: 30px;
+	width: 140px;
+	background-color: #00b5ad;
+	top: 1%;
+	left: 0.1%;
+}
+
+.today:after{
+	content: "";
+	display: block;
+	border-style: solid;
+	border-width: 0 13px 13px 0;
+	border-color: transparent #009a93 transparent transparent;
+	position: absolute;
+	left: 0.8%;
+	top: 32px;
+}
+
+.order_day{
+	margin-top: 25px;
+	text-transform: capitalize;
+	text-align: center;
+	font-weight: bold;
+	font-size: 16px;
+}
+
 .ordered_dish{
-	border: 1px solid red;
+	
 }
 
 .children{
 	border: 1px solid aqua;
+}
+
+.your_order{
+	text-align: center;
+	margin-bottom: 30px;
 }
