--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -6,6 +6,8 @@ $icon-font-path: "/bower_components/bootstrap-sass-official/assets/fonts/bootstr
 @import 'form.scss';
 @import 'order.scss';
 @import 'panel.scss';
+@import 'pre_order.scss';
+@import 'dish.scss';
 
 .browsehappy {
     margin: 0.2em 0;
