--- a/app/scripts/templates/categories_collection.hbs
+++ b/app/scripts/templates/categories_collection.hbs
@@ -1,6 +1,6 @@
 {{#each categories}}
-	<h3>{{title}}</h3>
-	<div class="row">
-		<div class="dishes_loop-{{../day_number}} dish-categories-{{id}}"></div>
-	</div>
+  <h3 class="category_title">{{title}}</h3>
+  <div class="row">
+    <div class="dishes_loop-{{../day_number}} dish-categories-{{id}}"></div>
+  </div>
 {{/each}}
