update login and remove route:order

--- a/app/scripts/templates/daily_ration.hbs
+++ b/app/scripts/templates/daily_ration.hbs
@@ -1,4 +1,4 @@
-<header id="user_panel"></header>
+<div id="user_panel"></div>
 <h2 class="your_order">Your order for this week</h2>
 {{#each day}}
   <div class='col-sm-3'>
