--- a/app/scripts/templates/form.hbs
+++ b/app/scripts/templates/form.hbs
@@ -1,4 +1,4 @@
-<header id="user_panel"></header>
+<div id="user_panel"></div>
 <div class="container">
   <form id="order_form" role="form">
     <div id="sprintContainer">
